# Ros-Workspace

./: README.md
DRL_Path_Planning/: README.md
DRL_Path_Planning/tf_pkg/: CMakeLists.txt
DRL_Path_Planning/tf_pkg/scripts/: D3QN_PER_dynamic_obs.py  D3QN_PER_obs.py  D3QN_PER_obs_30m.py  D3QN_PER_obs_test.py  D3QN_PER_without_obs_30m.py  D3QN_PER_without_obs_test.py  Models.py  env_dynamic_obs.py  env_obs_30m.py  env_obs_test.py  env_without_obs_30m.py  env_without_obs_test.py  path_planer.py  plot_paths_result.py
DRL_Path_Planning/tf_pkg/scripts/Init_points/: Init_points.py
DRL_Path_Planning/tf_pkg/scripts/Path_planning/: static_obstacle_pathplanning.py
beginner_tutorials/: .gitattributes  CMakeLists.txt  package.xml
beginner_tutorials/launch/: demo_turtlebot3_navigation.launch  different_maps_merge.launch  find_object_3d.launch  maps_view.launch  multi_rvizs.launch  object_following.launch  real_world.launch  rtab_navigation.launch  slam_explore.launch  slam_navigation.launch  spawn_model.launch  turtlebot3_teleop_key.launch
beginner_tutorials/launch/multi_robots/: robots.launch  waffle_robot.launch
beginner_tutorials/models/burger/: model.config  model.sdf
beginner_tutorials/models/burger_kinect/: model.config  model.sdf
beginner_tutorials/models/kinect/: model.sdf
beginner_tutorials/rviz/: turtlebot3_navigation.rviz
beginner_tutorials/scripts/: add_two_ints_client.py  add_two_ints_server.py  listener.py  object_goal.py
beginner_tutorials/src/: object_goal.cpp  object_goal.py
beginner_tutorials/urdf/: turtlebot3_burger.gazebo.xacro
body_pose/: .gitignore  CMakeLists.txt  README.md  package.xml
body_pose/launch/: body_pose.launch  body_pose_test.launch
body_pose/msg/: BodyInfo.msg
body_pose/src/: body_pose_node.py  body_pose_test_node.py
body_pose/src/dataset/: mscoco.py  pose_dataset.py
body_pose/src/demo/: demo_multiperson.py  get_body_rect.py  singleperson.py
body_pose/src/multiperson/: detections.py
body_pose/src/nnet/: losses.py  pose_net.py  predict.py
body_pose/src/util/: visualize.py
body_pose/srv/: BodyPose.srv
find_moving_objects/rviz/: moving_objects.rviz
find_moving_objects/src/find_moving_objects/: bank.cpp
find_object/: CMakeLists.txt  package.xml
find_object/launch/: find_object_2d.launch  find_object_3d.launch
find_object/src/ros/: FindObjectROS.cpp  tf_example_node.cpp
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
turtlebot3_machine_learning/D3QN/: CMakeLists.txt  package.xml
turtlebot3_machine_learning/D3QN/nodes/: D3QN_stage  D3QN_training
turtlebot3_machine_learning/D3QN/nodes/logs/: events.out.tfevents.1649669931.workstation  events.out.tfevents.1649671011.workstation  events.out.tfevents.1649673281.workstation  events.out.tfevents.1649676738.workstation
turtlebot3_machine_learning/D3QN/src/: Env_stage.py  GazeboWorld.py  RealWorld.py  respawnGoal.py  setGoal.py
turtlebot3_machine_learning/turtlebot3_dqn/: CMakeLists.txt  package.xml  setup.py
turtlebot3_machine_learning/turtlebot3_dqn/nodes/: result_graph  turtlebot3_dqn_stage_1  turtlebot3_dqn_stage_2  turtlebot3_dqn_stage_3  turtlebot3_dqn_stage_4
turtlebot3_machine_learning/turtlebot3_dqn/save_model/: stage_1_10.h5  stage_1_100.h5  stage_1_110.h5  stage_1_120.h5  stage_1_130.h5  stage_1_20.h5  (+23 more)
(+10 files in other folders)
